--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: geigen
 Type: Package
 Title: Calculate generalized eigenvalues of a matrix pair
-Version: 1.1
-Date: 2013-05-23
-Author: Berend Hasselman
+Version: 1.2
+Date: 2013-06-18
+Author: Berend Hasselman, Lapack authors
 Maintainer: Berend Hasselman <bhh@xs4all.nl>
 Description: Compute generalized eigenvalues and eigenvectors of a pair
         of matrices, using routines from Lapack (dggev and zggev).
@@ -11,7 +11,7 @@ Description: Compute generalized eigenvalues and eigenvectors of a pair
         matrices using Lapack routines.  In the latter case options for
         ordering the generalized eigenvalues are provided.
 License: GPL (>= 2)
-Packaged: 2013-05-23 13:37:57 UTC; berendhasselman
+Packaged: 2013-06-18 04:57:15 UTC; berendhasselman
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2013-05-23 15:53:52
+Date/Publication: 2013-06-18 14:41:49
